# local-ocr-idp

./: .gitignore  README.md
backend/: main.py  pyproject.toml
backend/models/: schemas.py
backend/routers/: extract.py
backend/services/: ollama.py  pdf.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/api/: client.js
frontend/src/components/: PromptBuilder.jsx  ResultsPanel.jsx  UploadZone.jsx
